# virtchord

./: .gitignore  Cargo.toml  README.md  reset  run
src/: config.rs  daemon.rs  example.rs  keyboard.rs  main.rs
